--- a/templates/search-results.html
+++ b/templates/search-results.html
@@ -6,12 +6,9 @@
 {% endblock %}
 
 {% block content %}
-    {% for keys, results in results_dict.iteritems() %}
-        {{ keys.replace("_", " ").replace("is", "") }} {{ results }} <br>
-    {% endfor %}
 
     <script src="/static/map.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=mykey&callback=initMap" async defer>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD7lvYh6B1mVq3aSbMvioSCqnN8OTu3aIA&callback=initMap" async defer>
     </script>
     <!-- txt file for key? more like img less html/key.js?-->
     <script src="/static/mapstyle.js"></script>
