Completed first project.

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400,600" rel="stylesheet">
     <link href="/static/format.css" rel="stylesheet">
     <title>{% block title %}TITLE HERE{% endblock %}</title>
     {% block head %}
@@ -9,13 +10,6 @@
         {% endfor %}
     {% endblock %}
 </head>
-<body>
     {% block content %}
     {% endblock %}
-</body>
-
-
-<footer><br><br>
-    For discerning connoisseurs of risky ideas only.
-</footer>
 </html>
