--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,8 +3,13 @@
 {% block title %}Crasher{% endblock %}
 
 {% block content %}
-<a href="/event-search">So you'd like to crash a party?</a>
 
-<h1>About this app:</h1>
-<p>This app searches through Facebook events to find small parties (75 people or less) in specific cities to crash.</b>
+<body class="homepage">
+<div class="crasher">Crasher</div>
+<form action="/search-results">
+    <input type="text" name="city" class="city" value="Enter a city here">
+</form><br><br>
+<h1 class="h1home">About this app:</h1>
+<p class="home">Crasher filters through Facebook events to find small parties (75 people or less) in specific cities to crash.</p>
+</body>
 {% endblock %}
