--- a/templates/search-results.html
+++ b/templates/search-results.html
@@ -6,9 +6,11 @@
 {% endblock %}
 
 {% block content %}
+<body class="search-results">
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBY4Wm6alx2UzBBkAZDEr3xT8fcA40YfEU">
     </script>
     <script src="/static/map.js"></script>
     <script src="/static/mapstyle.js"></script>
     <div id='event-map'></div>
+</body>
 {% endblock %}
