--- a/static/format.css
+++ b/static/format.css
@@ -1,9 +1,86 @@
 #event-map {
-    width: 600px;
-    height: 600px;
+    width: 800px;
+    height: 800px;
+    margin: auto;
+}
+
+.crasher {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700;
+    font-size: 80px;
+    color: white;
+    top: 40%;
+}
+
+.city {
+    top: 50%;
+    width: 200px;
+    height: 35px;
+    font-family: "Open Sans", sans-serif;
+    font-size: 25px;
+}
+
+.city, .crasher, .h1home, .home {
+    margin: 0;
+    position: absolute;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+}
+
+.container {
+    font-family: "Open Sans", sans-serif;
+    font-size: 12px;
+    color: black;
+    background: rgba(255, 255, 255, 0.6);
+    margin-top: 9%;
+}
+
+.h1name {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700;
+    font-size: 40px;
+    color: #FFF7F2;
+    text-align: center;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
+.h1home {
+    top: 86%;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 600;
+    font-size: 25px;
+    color:#FF0267;
+}
+
+.home {
+    font-family: "Open Sans", sans-serif;
+    font-size: 20px;
+    color: white;
+    top: 90%;
 }
 
 .window-content {
     color: #04162b;
     width: 150px;
+}
+
+/* backgrounds */
+.event-details, .homepage, .search-results {
+    background-repeat:no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+    background-size: cover;
+}
+
+.event-details {
+    background-image: url("bacchus.jpg");
+}
+
+.homepage {
+    background-image: url("party.jpg");
+}
+
+.search-results {
+    background-image: url("gps.jpg");
 }
